--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css"> 
+    <h2>PARFIAT! STORE</h2>
 </head>
                                          
 <body>
