updated radio button

--- a/brushes.html
+++ b/brushes.html
@@ -21,7 +21,11 @@
     <p>Information regarding stock is available on the product information table.</p>
     <br/>
     <h4>Price</h4>
-    <p>R60 per pack.</p>
+ <p>R60 per pack.</p>
+    <br/>
+     <label for="buy now">Buy Now</label>
+    <input type="radio" id="buy now" name="shop"> 
+
 
     
     
