--- a/table.html
+++ b/table.html
@@ -12,31 +12,38 @@
        <td>PRODUCT NAME</td>
        <td>STYLE</td>
        <td>BARCODE</td>
+       <td>CATEGORY</td>
+       <td>WEIGHT</td>
     </tr> 
     <tr>
      <td>Organic Make-Up</td>
         <td>Organic</td>
         <td>#456788</td>
+        <td>Skin</td>
       </tr>
     <tr>
      <td>Pasta</td> 
       <td>Wide range to choose from.</td>
         <td>######</td>
+        <td>Food</td>
       </tr>
       <tr>
       <td>Tile Cleaner</td>
       <td>Neutral</td>
       <td>#776548</td>
+          <td>Home</td>
       </tr>
       <tr>
       <td>Afro-Hair-Shampoo</td>
       <td>Organic</td>
       <td>#886543</td>
+          <td>Hair</td>
       </tr>
       <tr>
       <td>Brushes</td>
           <td>Wide range to choose from.</td>
           <td>######</td>
+          <td>Oral hygiene</td>
       </tr>
     </table> 
     
