updated product information
Added dimensions

--- a/table.html
+++ b/table.html
@@ -20,30 +20,35 @@
         <td>Organic</td>
         <td>#456788</td>
         <td>Skin</td>
+        <td>100-500ml</td>
       </tr>
     <tr>
      <td>Pasta</td> 
       <td>Wide range to choose from.</td>
         <td>######</td>
         <td>Food</td>
+        <td>2-5kg</td>
       </tr>
       <tr>
       <td>Tile Cleaner</td>
       <td>Neutral</td>
       <td>#776548</td>
           <td>Home</td>
+          <td>500ml-2l</td>
       </tr>
       <tr>
       <td>Afro-Hair-Shampoo</td>
       <td>Organic</td>
       <td>#886543</td>
           <td>Hair</td>
+          <td>500ml-1l</td>
       </tr>
       <tr>
       <td>Brushes</td>
           <td>Wide range to choose from.</td>
           <td>######</td>
           <td>Oral hygiene</td>
+          <td>Range per type</td>
       </tr>
     </table> 
     
