--- a/brushes.html
+++ b/brushes.html
@@ -5,6 +5,12 @@
     </head>
     
 <body>
+    <div id="menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    </div>
+    
     <h2>Brushes</h2>
     <div class="gallery">
     <img src="images/images%20(9).jpg">
