--- a/shampoo.html
+++ b/shampoo.html
@@ -5,6 +5,11 @@
     </head>
     
 <body>
+    <div id="menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    </div> 
     <h2>Afro-Hair-Shampoo</h2>
     <div class="gallery">
     <img src="images/images%20(5).jpg">
