--- a/tilecleaner.html
+++ b/tilecleaner.html
@@ -5,6 +5,11 @@
     </head>
     
 <body>
+     <div id="menu">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    </div>
     <h2>Tile-Cleaner</h2>
     <div class="gallery">
      <img src="images/download%20(7).jpg">
