--- a/brushes.html
+++ b/brushes.html
@@ -28,7 +28,7 @@
     <br/>
     <h4>Price</h4>
  <p>R60 per pack.</p>
- 
+ <br/>
   <table border="1">
    <tr>
        <td>PRODUCT NAME</td>
@@ -63,7 +63,8 @@
       <br/>
      <label for="buy now">Buy Now</label>
     <input type="radio" id="buy now" name="shop"> 
-   </body>
+    </table>
+    </body>
     
     
 </html>
